# bloom

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/glad/: glad.h
lib/glfw/: CMakeLists.txt
lib/glfw/docs/html/: jquery.js  tabs.css
resources/shaders/: default.frag  default.vert
shaders/: default.frag
src/: engine.cpp  engine.h  glad.c  keys.h  main.cpp  math_cli.cpp
src/bloom/: actor.cpp  actor.h  engine.cpp  engine.h  keys.h  object.cpp  object.h  stb.cpp
src/bloom/vision/: ebo.cpp  ebo.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/catv/: lintr.h  matrix.h  vector.h
